WebApplications/nginx/service.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: NodePort
  selector:
    app: nginx-deploymnet
  ports:
  - port: 80
    targetPort: 80
    nodePort: 31987
